terraform-ec2-bastian-public-private-vpc/modules/sec/main.tf

resource "aws_security_group" "allow_web" {
  description = "HTTP, PING, SSH"
  name = "allow_web"
  
  # VPC ID in which Security group has to be created!
  vpc_id = var.vpc_id

  # Created an inbound rule for webserver access!
  ingress {
    description = " Allow HTTP"
    from_port   = 80
    to_port     = 80

    # Here adding tcp instead of http, because http in part of tcp only!
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  # Created an inbound rule for ping
  ingress {
    description = "Ping"
    from_port   = 0
    to_port     = 0
    protocol    = "ICMP"
    cidr_blocks = ["0.0.0.0/0"]
  }

  # Created an inbound rule for SSH
  ingress {
    description = "SSH"
    from_port   = 22
    to_port     = 22

    # Here adding tcp instead of ssh, because ssh in part of tcp only!
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  # Outward Network Traffic for all
  egress {
    description = "Allow output for everyone"
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  } 
}
